Fix bug where nav button did not work on smaller res

--- a/src/app/reviewer-portal/reviewer-portal.component.css
+++ b/src/app/reviewer-portal/reviewer-portal.component.css
@@ -54,7 +54,7 @@ a{
     overflow-y: auto;
     padding-top: 60px; /* Place content 60px from the top */
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-    z-index: 99999;
+    z-index: 999999;
 }
 .sidenav-show{
   top: 200px;
@@ -67,7 +67,7 @@ a{
   overflow-y: auto;
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-  z-index: 99999;
+  z-index: 999999;
 }
 
 /* The navigation menu links */
